--- a/squelettes/content/article.html
+++ b/squelettes/content/article.html
@@ -1,5 +1,10 @@
 <BOUCLE_content(ARTICLES){id_article}>
 
+[<aside class="prix">
+    (#INCLURE{fond=inclure/prix,objet=article,id_objet=#ID_ARTICLE,expl= (<:htva:>)})
+</aside>]
+
+
 <article class="content-principal">
 	<header class="cartouche">
 		[<p class="#EDIT{surtitre} surtitre">(#SURTITRE)</p>]
