--- a/squelettes/inclure/options_packs.html
+++ b/squelettes/inclure/options_packs.html
@@ -1,19 +1,17 @@
-  [(#REM) Menu de navigation mots-cles ]
-  
-
- <BOUCLE_groupes(GROUPES_MOTS){id_parent=11}{par num titre}>
-   <B_mots>#SET{mult,li}
-  <div class="liste mots">
-      <h2 class="h2">#TITRE</h2>
-      [(#TOTAL_BOUCLE|>{1}|?{<ul class="liste-items">,''})]
-
-      <BOUCLE_mots(MOTS) {id_article} {id_groupe}{par titre}>
-          <[(#TOTAL_BOUCLE|>{1}|?{li#SET{mult,li},div#SET{mult,div}}) ]class="item" rel="tag"><a href="#URL_MOT" rel="tag">#TITRE</a></[(#GET{mult})]> 
-      </BOUCLE_mots>
-      [(#TOTAL_BOUCLE|>{1}|?{</ul>,''})]
-  </div>
-  </B_mots>
- </BOUCLE_groupes>
-
-
-
+<B_objets>
+<dl class="faq">
+<BOUCLE_objets(SELECTION_OBJETS){id_objet_dest}{objet_dest}{type_lien!=utilise_pack}{par ordre}>
+    <BOUCLE_article(ARTICLES){id_article=#ID_OBJET}{si #OBJET=article}>
+    #SET{intro,''}
+     [(#INTRODUCTION|oui)#SET{intro,oui}]
+        <dt class="row_[(#COMPTEUR_BOUCLE|modulo{3})]">
+            [(#GET{intro}|oui)
+            <span class="open">-</span>
+            <span class="closed">+</span>] 
+            <span class="#EDIT{titre} titre">#TITRE</span>
+        </dt>     
+        <dd class="#EDIT{introduction} introduction">[(#INTRODUCTION)]</dd>
+    </BOUCLE_article>
+</BOUCLE_objets>
+</dl>
+</B_objets>
