--- a/squelettes/inclure/objet_precieux_article.html
+++ b/squelettes/inclure/objet_precieux_article.html
@@ -5,9 +5,14 @@
             [(#ENV{prix})] [(#ID_ARTICLE|devise_defaut|traduire_devise)] (<:shopprix:htva:>)
        </dd>       
         <dd class="ajouter_au_panier">
-        [(#BOUTON_ACTION{<:paniers:action_ajouter:>,#URL_ACTION_AUTEUR{remplir_panier,prix-#ID_PRIX_OBJET,#SELF},ajax})] 
+        [(#BOUTON_ACTION{<:paniers:action_ajouter:>,#URL_ACTION_AUTEUR{remplir_panier,prix_objet-#ID_PRIX_OBJET,#SELF},ajax})] 
         </dd>
    
 </dl>
 </BOUCLE_art>
 </B_art>
+<script>
+jQuery(document).ready(function(){
+ ajaxReload('mon_panier', { });
+ });
+</script>
