--- a/squelettes/inclure/objet_precieux_article.html
+++ b/squelettes/inclure/objet_precieux_article.html
@@ -11,7 +11,7 @@
 </dl>
 </BOUCLE_art>
 </B_art>
-<script>
+<script type="text/javascript">
 jQuery(document).ready(function(){
  ajaxReload('mon_panier', { });
  });
