ameliorer le procesus commande

--- a/squelettes/content/selection.html
+++ b/squelettes/content/selection.html
@@ -17,7 +17,7 @@
             <h2><:shop:vos_coordonnees:></h2>
             [<p class="reponse_formulaire reponse_formulaire_ok">(#ENV**{message_ok})</p>]
             [<p class="reponse_formulaire reponse_formulaire_erreur">(#ENV*{message_erreur})</p>]
-            [(#FORMULAIRE_INSCRIPTION_CLIENT{#SELF|parametre_url{message,ok}})]
+            [(#FORMULAIRE_INSCRIPTION_CLIENT)]
          </div>
         
         
