--- a/squelettes/inclure/ajaxreload.html
+++ b/squelettes/inclure/ajaxreload.html
@@ -1,5 +1,9 @@
 <script type="text/javascript">
-jQuery(document).ready(function(){
- ajaxReload('mon_panier', { });
- });
+    jQuery(document).ready(function(){
+        ajaxReload('mon_panier', { });
+        });
+       [(#ENV**{message_ok}|oui)
+        $('.formulaire_spip').attr("style","position: absolute; top: 29%; left: 10%; font-size: 200%;background:transparent;border:none;display:none");
+         $('.formulaire_spip').show(2200);
+        ]        
 </script>
