--- a/squelettes/inclure/mon_panier.html
+++ b/squelettes/inclure/mon_panier.html
@@ -4,13 +4,12 @@
 <div id="panier_wrap">
     <h2><:paniers:mon_panier:></h2>
     <div class="ajax">#FORMULAIRE_PANIER</div>
-    	
     <BOUCLE_ispanier(CONDITION){si #SESSION{id_panier}|oui}>
     	[(#BOUTON_ACTION{<:shop:vider_le_panier:>,#URL_ACTION_AUTEUR{supprimer_panier_encours,'',#SELF},ajax})]
     	<BOUCLE_article_suitepanier(ARTICLES){id_rubrique=-1}>
     	   [(#PAGE|=={suitepanier}|oui)<div class="texte #EDIT{texte}">#TEXTE</div>]
     	</BOUCLE_article_suitepanier>
-    	[(#URL_PAGE{selection}|lien_ou_expose{<:shop:passer_la_commande:>,'',continuer})]
+    	[(#VAL{#URL_PAGE{selection}#abonne_coord}|lien_ou_expose{<:shop:passer_la_commande:>,'',continuer})]
     	<//B_article_suitepanier>
     </BOUCLE_ispanier>
 </div>
