--- a/squelettes/inclure/prix.html
+++ b/squelettes/inclure/prix.html
@@ -1,10 +1,19 @@
 <B_objets_precieux>
     <div class="vente liste_objets_precieux">
-        <BOUCLE_objets_precieux(PRIX_OBJETS){id_objet}{objet}{pagination}>
+        <BOUCLE_objets_precieux(PRIX_OBJETS){id_objet}{objet}>
         #SET{prix_ht,#PRIX_HT*{prix_objet,#ID_PRIX_OBJET}}
-        [(#SET{taxe,[(#PRIX*{prix_objet,#ID_PRIX_OBJET}|moins{#GET{prix_ht}})]})]        
-            <INCLURE{fond=inclure/objet_precieux_#OBJET,id_objet,prix=#GET{prix_ht},taxe=#GET{taxe},id_prix_objet,id_declinaison,ajax}/>
+        [(#SET{taxe,[(#PRIX*{prix_objet,#ID_PRIX_OBJET}|moins{#GET{prix_ht}})]})]  
+        [(#PRIX|>{0}|?{#SET{ttc,oui},#SET{ttc,''})}]   
+            <INCLURE{fond=inclure/objet_precieux_#OBJET,id_objet,prix=#GET{prix_ht},taxe=#GET{taxe},id_prix_objet,id_declinaison,ttc=#GET{ttc},ajax}/>
         </BOUCLE_objets_precieux>
-    [<p class="pagination">(#PAGINATION)</p>]
+        <BOUCLE_objets_add(SELECTION_OBJETS){objet_dest=#OBJET}{id_objet_dest=#ID_OBJET}{type_lien=hebergement}>
+        #SET{prix_ht,''}
+        #SET{taxe,''}
+            <BOUCLE_objets_precieux_add(PRIX_OBJETS){id_objet}{objet}>
+            #SET{prix_ht,#PRIX_HT*{prix_objet,#ID_PRIX_OBJET}}
+        [(#SET{taxe,[(#PRIX*{prix_objet,#ID_PRIX_OBJET}|moins{#GET{prix_ht}})]})]  
+            <INCLURE{fond=inclure/objet_precieux_#OBJET,id_objet,prix=#GET{prix_ht},taxe=#GET{taxe},id_prix_objet,id_declinaison,ttc=#GET{ttc},ajax}/>
+        </BOUCLE_objets_precieux_add>
+        </BOUCLE_objets_add>
     </div>
 </B_objets_precieux>
