ouvrir les options comme fenêtre draggable

--- a/squelettes/inclure/objet_precieux_article.html
+++ b/squelettes/inclure/objet_precieux_article.html
@@ -5,7 +5,7 @@
             [(#ENV{prix})] [(#ID_ARTICLE|devise_defaut|traduire_devise)] ([(#TAXE|=={0}|?{<:shopprix:ttc:>,<:shopprix:htva:>})])
        </dd>       
         <dd class="ajouter_au_panier">
-        [(#BOUTON_ACTION{<:paniers:action_ajouter:>,#URL_ACTION_AUTEUR{remplir_panier,prix_objet-#ID_PRIX_OBJET,#SELF},ajax})] 
+        [(#BOUTON_ACTION{<:websimple:action_ajouter:>,#URL_ACTION_AUTEUR{remplir_panier,prix_objet-#ID_PRIX_OBJET,#SELF},ajax})] 
         </dd>
    
 </dl>
