--- a/squelettes/extra2/article.html
+++ b/squelettes/extra2/article.html
@@ -7,9 +7,6 @@
 			<li class="item[ (#EXPOSE)][(#COMPTEUR_BOUCLE|=={1}|oui) first][(#COMPTEUR_BOUCLE|=={#TOTAL_BOUCLE}|oui) last]"><div class="square">&nbsp;</div> <a href="#URL_ARTICLE">#TITRE</a></li>
 			</BOUCLE_articles_rubrique>
 		</ul>
-	</aside>
+	</div>
 	</B_articles_rubrique>
-
-
-
 </BOUCLE_extra2_article>
