gerer les sous fenêtre, encore un problème avec la fenêtre des packs de base

--- a/squelettes/content/article-packs.html
+++ b/squelettes/content/article-packs.html
@@ -2,7 +2,7 @@
 <BOUCLE_content(ARTICLES){id_article}>
 
 [<aside class="prix">
-    (#INCLURE{fond=inclure/prix,objet=article,id_objet=#ID_ARTICLE,expl= (<:htva:>)})
+    (#INCLURE{fond=inclure/prix,objet=article,id_objet=#ID_ARTICLE,env,expl= (<:htva:>)})
 </aside>]
 
 <article class="content-principal">
@@ -41,7 +41,10 @@ et pourquoi pas ajax
 
 [(#REM) Forum de l'article
 NB : pour desactiver les forums de l'article, supprimez simplement la ligne ci-dessous ]
-<INCLURE{fond=inclure/forum,id_article,repondre_url=(#PARAMETRES_FORUM|url_reponse_forum),repondre_titre=<:repondre_article:>} />
+[(#ENV{forum}|=={non}|non)
+    #SET{retour,#PARAMETRES_FORUM|url_reponse_forum}
+    <INCLURE{fond=inclure/forum,id_article,repondre_url=#GET{retour},repondre_titre=<:repondre_article:>} />
+    ]
 
 </BOUCLE_content>
 <div>
