--- a/squelettes/inclure/objet_precieux_article.html
+++ b/squelettes/inclure/objet_precieux_article.html
@@ -4,9 +4,16 @@
         <dd class="prix">
             [(#ENV{prix})] [(#ID_ARTICLE|devise_defaut|traduire_devise)] ([(#TAXE|=={0}|?{<:shopprix:ttc:>,<:shopprix:htva:>})])
        </dd>       
-        <dd class="ajouter_au_panier">
+        
+        [(#ID_ARTICLE|in_array{#ENV{utilises}}|ou{#ENV{panier}|=={non}}|?{
+            <dd class="compris_pack">
+            <:websimple:compris_pack:>
+            ,
+            <dd class="ajouter_au_panier">
             #SET{retour,#URL_ACTION_AUTEUR{charger_squelette,-}|parametre_url{squelette,inclure/ajaxreload}}
-        [(#BOUTON_ACTION{<:websimple:action_ajouter:>,#URL_ACTION_AUTEUR{remplir_panier,prix_objet-#ID_PRIX_OBJET,#GET{retour}},ajax})] 
+            [(#BOUTON_ACTION{<:websimple:action_ajouter:>,#URL_ACTION_AUTEUR{remplir_panier,prix_objet-#ID_PRIX_OBJET,#GET{retour}},ajax})] 
+            })]
+
         </dd>
    
 </dl>
