--- a/squelettes/inclure/prix.html
+++ b/squelettes/inclure/prix.html
@@ -1,18 +1,23 @@
+#SET{utilises,#ARRAY}
+<BOUCLE_objets(SELECTION_OBJETS){id_objet_dest=#ENV{id_article_base}}{objet_dest=#ENV{objet}}{type_lien=compris_pack}{par ordre}>
+#SET{utilises,#GET{utilises}|push{#ID_OBJET}}
+</BOUCLE_objets>
+
 <B_objets_precieux>
     <div class="vente liste_objets_precieux">
         <BOUCLE_objets_precieux(PRIX_OBJETS){id_objet}{objet}>
         #SET{prix_ht,#PRIX_HT*{prix_objet,#ID_PRIX_OBJET}}
         [(#SET{taxe,[(#PRIX*{prix_objet,#ID_PRIX_OBJET}|moins{#GET{prix_ht}})]})]  
         [(#PRIX|>{0}|?{#SET{ttc,oui},#SET{ttc,''})}]   
-            <INCLURE{fond=inclure/objet_precieux_#OBJET,id_objet,prix=#GET{prix_ht},taxe=#GET{taxe},id_prix_objet,id_declinaison,ttc=#GET{ttc},ajax}/>
+            <INCLURE{fond=inclure/objet_precieux_#OBJET,id_objet,prix=#GET{prix_ht},taxe=#GET{taxe},id_prix_objet,id_declinaison,ttc=#GET{ttc},utilises=#GET{utilises},env,ajax}/>
         </BOUCLE_objets_precieux>
         <BOUCLE_objets_add(SELECTION_OBJETS){objet_dest=#OBJET}{id_objet_dest=#ID_OBJET}{type_lien=hebergement}>
         #SET{prix_ht,''}
         #SET{taxe,''}
-            <BOUCLE_objets_precieux_add(PRIX_OBJETS){id_objet}{objet}>
+        <BOUCLE_objets_precieux_add(PRIX_OBJETS){id_objet}{objet}>
             #SET{prix_ht,#PRIX_HT*{prix_objet,#ID_PRIX_OBJET}}
         [(#SET{taxe,[(#PRIX*{prix_objet,#ID_PRIX_OBJET}|moins{#GET{prix_ht}})]})]  
-            <INCLURE{fond=inclure/objet_precieux_#OBJET,id_objet,prix=#GET{prix_ht},taxe=#GET{taxe},id_prix_objet,id_declinaison,ttc=#GET{ttc},ajax}/>
+            <INCLURE{fond=inclure/objet_precieux_#OBJET,id_objet,prix=#GET{prix_ht},taxe=#GET{taxe},id_prix_objet,id_declinaison,ttc=#GET{ttc},utilises=#GET{utilises},env,ajax}/>
         </BOUCLE_objets_precieux_add>
         </BOUCLE_objets_add>
     </div>
