pas d'ajax onload

--- a/squelettes/inclure/options_packs.html
+++ b/squelettes/inclure/options_packs.html
@@ -32,7 +32,7 @@
             [(#ENV{faq}|non)</a>]
         </dt>     
         <dd class="introduction"  id="article_#ID_ARTICLE">
-            <INCLURE{fond=content/article-packs,env,id_article=#GET{id_article},ajax=articles_packs_#ID_ARTICLE}/>
+            <INCLURE{fond=content/article-packs,env,id_article=#GET{id_article},edit=non}/>
         </dd>
       
     </BOUCLE_article>
