ne pas afficher la dd si as de contenu

--- a/squelettes/inclure/options_packs.html
+++ b/squelettes/inclure/options_packs.html
@@ -14,7 +14,7 @@
         <dt class="row">
                 [(#ID_ARTICLE|in_array{#GET{articles_env}}|oui)
                 [(#ENV{faq}|non)
-                    <a class="open" id="link_#ID_ARTICLE" data-base="#ID_OBJET_DEST" href="[(#ENV{url}|parametre_url{fonct_compris,#GET{articles_enlever}})]">]
+                    <a class="open" id="link_#ID_ARTICLE" data-target="float" data-base="#ID_OBJET_DEST" href="[(#ENV{url}|parametre_url{fonct_compris,#GET{articles_enlever}})]">]
                      <span class="closed">-</span>
                      #SET{id_article,#ID_ARTICLE}
                      ]
@@ -24,16 +24,16 @@
                          #SET{id_article,#ID_ARTICLE}
                           <span class="open">-</span>
                          ,
-                         <a  class="closed" id="link_#ID_ARTICLE" data-base="#ID_OBJET_DEST"  href="[(#ENV{url}|parametre_url{fonct_compris,#GET{articles}}|parametre_url{id_article_base,#ID_OBJET_DEST})]">
+                         <a  class="closed" id="link_#ID_ARTICLE" data-target="float" data-base="#ID_OBJET_DEST"  href="[(#ENV{url}|parametre_url{fonct_compris,#GET{articles}}|parametre_url{id_article_base,#ID_OBJET_DEST})]">
                      })]
                     <span class="close">+</span>
                 ]
                 <span class="#EDIT{titre} titre">#TITRE</span>
             [(#ENV{faq}|non)</a>]
         </dt>     
-        <dd class="introduction"  id="article_#ID_ARTICLE">
-            <INCLURE{fond=content/article-packs,env,id_article=#GET{id_article},edit=non}/>
-        </dd>
+        [(#GET{id_article}|oui)<dd class="introduction"  id="article_#ID_ARTICLE">
+            [(#INCLURE{fond=content/article-packs,env,id_article=#GET{id_article},edit=non})]
+        </dd>]
       
     </BOUCLE_article>
 </BOUCLE_objets>
@@ -54,21 +54,21 @@
             ]
         <dt class="row">
                 [(#ID_ARTICLE|in_array{#GET{articles_env}}|oui)
-                    <a class="open" id="link_#ID_ARTICLE" data-base="#ID_OBJET_DEST" data-panier="non" href="[(#ENV{url}|parametre_url{fonct_compris,#GET{articles_enlever}})]">
+                    <a class="open" id="link_#ID_ARTICLE" data-target="float" data-base="#ID_OBJET_DEST" data-panier="non" href="[(#ENV{url}|parametre_url{fonct_compris,#GET{articles_enlever}})]">
                      <span class="closed">-</span>
                      #SET{id_article,#ID_ARTICLE}
                      ]
                 [(#ID_ARTICLE|in_array{#GET{articles_env}}|non)
                     #SET{id_article,''}
-                    <a  class="closed" id="link_#ID_ARTICLE" data-base="#ID_OBJET_DEST" data-panier="non" data-faq="faq" href="[(#ENV{url}|parametre_url{fonct_compris,#GET{articles}}|parametre_url{id_article_base,#ID_OBJET_DEST}|parametre_url{panier,faq}|parametre_url{faq,oui})]">
+                    <a  class="closed" id="link_#ID_ARTICLE" data-target="float" data-base="#ID_OBJET_DEST" data-panier="non" data-faq="faq" href="[(#ENV{url}|parametre_url{fonct_compris,#GET{articles}}|parametre_url{id_article_base,#ID_OBJET_DEST}|parametre_url{panier,faq}|parametre_url{faq,oui})]">
                     <span class="open">+</span>
                 ]
                 <span class="#EDIT{titre} titre">#TITRE</span>
             </a>
         </dt>     
-        <dd class="introduction"  id="article_#ID_ARTICLE">
-            <INCLURE{fond=content/article-packs,env,id_article=#GET{id_article},ajax=articles_packs_#ID_ARTICLE}/>
-        </dd>
+        [(#GET{id_article}|oui)<dd class="introduction"  id="article_#ID_ARTICLE">
+           [(#INCLURE{fond=content/article-packs,env,id_article=#GET{id_article},ajax=articles_packs_#ID_ARTICLE})]
+        </dd>]
       
     </BOUCLE_article_pack_base>
 </BOUCLE_pack_base>
