--- a/squelettes/rubrique.html
+++ b/squelettes/rubrique.html
@@ -1,5 +1,5 @@
 <BOUCLE_principale_rubrique(RUBRIQUES){id_rubrique}{tout}>
 	[(#COMPOSITION|=={home}|oui)#SET{class,home}]
-	<INCLURE{fond=structure,env,id_secteur=#ID_SECTEUR,type-page=rubrique,composition=#COMPOSITION,id_trad,class=#GET{class}} />
+	<INCLURE{fond=structure,env,id_secteur=#ID_SECTEUR,type-page=rubrique,composition=#COMPOSITION,id_trad,class=#GET{class},id=#ID_RUBRIQUE}/>
 </BOUCLE_principale_rubrique>
 &nbsp;
