--- a/squelettes/content/article-packs.html
+++ b/squelettes/content/article-packs.html
@@ -1,14 +1,17 @@
+#SET{cookie_move,#EVAL{$_COOKIE['move']}}
+
+[(#GET{cookie_move}|=={off}|oui|ou{#GET{cookie_move}|non})#SET{faq,faq}]
+#SET{faq,#ENV{faq,#GET{faq}}}
 <BOUCLE_content(ARTICLES){id_article}>
 [<aside class="prix">
     (#INCLURE{fond=inclure/prix,objet=article,id_objet=#ID_ARTICLE,env,expl= (<:htva:>)})
 </aside>]
-
 <article class="content-principal">
 	<header class="cartouche">
 		[<p class="#EDIT{surtitre} surtitre">(#SURTITRE)</p>]
-		#SET{h,1}
-		[(#ENV{faq}|oui)#SET{h,2}]
-		<h[(#ENV{h,1}) ]class="h[(#ENV{h,1}) ]#EDIT{titre}">#TITRE</h#ENV{h,1}>
+
+
+		<h1 class="h[(#ENV{h,1}) ]#EDIT{titre}">#TITRE</h1>
 		[<p class="#EDIT{soustitre} soustitre">(#SOUSTITRE)</p>]
 	</header>
 	[<section class="#EDIT{chapo} chapo surlignable">(#CHAPO|image_reduire{500,0})</section>]
@@ -17,7 +20,7 @@
 			(#TEXTE|image_reduire{500,0})</section>
 		]
 	<section class="options_packs">
-	    <INCLURE{fond=inclure/options,id_objet_dest=#ID_ARTICLE,objet_dest=article,env,url=#URL_ARTICLE,ajax,h=#GET{h}}/>
+	    <INCLURE{fond=inclure/options,id_objet_dest=#ID_ARTICLE,objet_dest=article,url=#URL_ARTICLE,faq=#GET{faq},env,ajax}/>
 	</section>
 	[<section class="#EDIT{hyperlien} hyperlien"><:voir_en_ligne:> : <a href="(#URL_SITE)" class="spip_out">[(#NOM_SITE|sinon{[(#URL_SITE|couper{80})]})]</a></section>]
 	[<section class="#EDIT{ps} ps surlignable"><h2><:info_ps:></h2>(#PS|image_reduire{500,0})</section>]
