eviter des problèmes de cache pour la bonne détection du mode

--- a/squelettes/content/article-packs.html
+++ b/squelettes/content/article-packs.html
@@ -1,7 +1,4 @@
-#SET{cookie_move,#EVAL{$_COOKIE['move']}}
 
-[(#GET{cookie_move}|=={off}|oui|ou{#GET{cookie_move}|non})#SET{faq,faq}]
-#SET{faq,#ENV{faq,#GET{faq}}}
 <BOUCLE_content(ARTICLES){id_article}>
 [<aside class="prix">
     (#INCLURE{fond=inclure/prix,objet=article,id_objet=#ID_ARTICLE,env,expl= (<:htva:>)})
@@ -20,7 +17,7 @@
 			(#TEXTE|image_reduire{500,0})</section>
 		]
 	<section class="options_packs">
-	    <INCLURE{fond=inclure/options,id_objet_dest=#ID_ARTICLE,objet_dest=article,url=#URL_ARTICLE,faq=#GET{faq},env,ajax}/>
+	    <INCLURE{fond=inclure/options,id_objet_dest=#ID_ARTICLE,objet_dest=article,url=#URL_ARTICLE,env,ajax}/>
 	</section>
 	[<section class="#EDIT{hyperlien} hyperlien"><:voir_en_ligne:> : <a href="(#URL_SITE)" class="spip_out">[(#NOM_SITE|sinon{[(#URL_SITE|couper{80})]})]</a></section>]
 	[<section class="#EDIT{ps} ps surlignable"><h2><:info_ps:></h2>(#PS|image_reduire{500,0})</section>]
