--- a/squelettes/inclure/options.html
+++ b/squelettes/inclure/options.html
@@ -1,4 +1,7 @@
 #CACHE{0}
+#SET{cookie_move,#EVAL{$_COOKIE['move']}}
+[(#GET{cookie_move}|=={off}|oui|ou{#GET{cookie_move}|non})#SET{faq,faq}]
+#SET{faq,#ENV{faq,#GET{faq}}}
 <B_objets>
 <h2><:websimple:pack_compose_par:></h2>
 <dl class="[(#ENV{faq,flottable}) options]">  
@@ -13,14 +16,14 @@
             ]
         <dt class="row">
                 [(#ID_ARTICLE|in_array{#GET{articles_env}}|oui)
-                [(#ENV{faq}|non)
+                [(#GET{faq}|non)
                     <a class="open" id="link_#ID_ARTICLE" data-target="float" data-base="#ID_OBJET_DEST" href="[(#ENV{url}|parametre_url{fonct_compris,#GET{articles_enlever}})]">]
                      <span class="closed">-</span>
                      #SET{id_article,#ID_ARTICLE}
                      ]
                 [(#ID_ARTICLE|in_array{#GET{articles_env}}|non)
                     #SET{id_article,''}
-                     [(#ENV{faq}|?{
+                     [(#GET{faq}|=={faq}|?{
                          #SET{id_article,#ID_ARTICLE}
                           <span class="open">-</span>
                          ,
@@ -29,7 +32,7 @@
                     <span class="close">+</span>
                 ]
                 <span class="#EDIT{titre} titre">#TITRE</span>
-            [(#ENV{faq}|non)</a>]
+            [(#GET{faq}|=={faq}|non)</a>]
         </dt>     
         [(#GET{id_article}|oui)<dd class="introduction"  id="article_#ID_ARTICLE">
             [<div>(#INTRODUCTION)</div>]
