passer correctement le mode

--- a/squelettes/inclure/options.html
+++ b/squelettes/inclure/options.html
@@ -4,7 +4,7 @@
 #SET{faq,#ENV{faq,#GET{faq}}}
 <B_objets>
 <h2><:websimple:pack_compose_par:></h2>
-<dl class="[(#ENV{faq,flottable}) options]">  
+<dl class="[(#GET{faq,flottable}) options]">  
 <BOUCLE_objets(SELECTION_OBJETS){id_objet_dest}{objet_dest}{type_lien !IN utilise_pack,hebergement,pack_base}{par ordre}>
 #SET{compteur,#COMPTEUR_BOUCLE}
     #SET{articles,#ARRAY}
